--- a/backend/notebooks/test_document_flow.ipynb
+++ b/backend/notebooks/test_document_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e2b0ad30",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "69cbf705",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading .env from: c:\\projects\\HealthOps\\backend\\notebooks\\..\\.env\n",
+      "Loading .env from: /Users/mahimaadvilkar/Desktop/ALL ABOUT AI/HealthOps/backend/notebooks/../.env\n",
       "File exists: True\n",
       "API Key loaded: pat_vTthl4om3xGRfrE1...\n",
       "Full key for verification: pat_vTthl4om3xGRfrE1YY8BCH5Npx79zLh1\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "b7596024",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "be795339",
    "metadata": {},
    "outputs": [
@@ -103,9 +103,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing Status: FAILED\n",
-      "Message: Failed to process document: API Error: 401 - {\"errorCode\":\"UNAUTHORIZED\",\"message\":\"Failed to find user record with apiKey: pat_vTthl4om3***\",\"data\":{}}\n",
-      "Processing Time: 0.93 seconds\n",
+      "Processing Status: SUCCESS\n",
+      "Message: Document processed successfully\n",
+      "Processing Time: 5.02 seconds\n",
       "\n"
      ]
     }
@@ -123,10 +123,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ad52e16d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "EXTRACTED TEXT\n",
+      "============================================================\n",
+      "<a id='a3a327eb-6d16-48d5-90e8-8aa68ab6b42e'></a>\n",
+      "\n",
+      "HealthOps Medical Center\n",
+      "\n",
+      "PATIENT MEDICAL RECORD\n",
+      "\n",
+      "<a id='a32e8d5e-15af-4b2b-a1a4-5866aefb339e'></a>\n",
+      "\n",
+      "Date: January 10, 2026\n",
+      "\n",
+      "Document ID: DOC-2026-001\n",
+      "\n",
+      "<a id='0d35a1bf-17da-41ea-8b0d-bb1521ecb6bd'></a>\n",
+      "\n",
+      "## Patient Information\n",
+      "Name: John Doe\n",
+      "Date of Birth: March 15, 1985\n",
+      "Medical Record Number: MRN-12345\n",
+      "Gender: Male\n",
+      "\n",
+      "<a id='0172284b-06fe-4875-a5cc-5ff9d47da440'></a>\n",
+      "\n",
+      "Chief Complaint\n",
+      "Patient presents with persistent headache and fatigue lasting fo\n",
+      "\n",
+      "============================================================\n",
+      "KEY-VALUE PAIRS\n",
+      "============================================================\n",
+      "No key-value pairs extracted\n",
+      "\n",
+      "============================================================\n",
+      "TABLES\n",
+      "============================================================\n",
+      "Found 0 table(s)\n",
+      "\n",
+      "============================================================\n",
+      "METADATA\n",
+      "============================================================\n",
+      "Confidence: 95.00%\n",
+      "Document Type: medical_record\n"
+     ]
+    }
+   ],
    "source": [
     "if result['success']:\n",
     "    extracted = result['extracted_data']\n",
@@ -163,10 +213,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fcf810f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "VALIDATION RESULTS\n",
+      "============================================================\n",
+      "Status: PASSED\n",
+      "Has Text: True\n",
+      "Has Tables: False\n",
+      "Has Key-Value Pairs: False\n",
+      "Confidence Score: 95.00%\n",
+      "\n",
+      "✓ No issues found!\n"
+     ]
+    }
+   ],
    "source": [
     "if result['success']:\n",
     "    validation = await service.validate_extraction(result['extracted_data'])\n",
@@ -190,10 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "547aaaf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Results saved to: ../data/extraction_results.json\n"
+     ]
+    }
+   ],
    "source": [
     "if result['success']:\n",
     "    output_file = \"../data/extraction_results.json\"\n",
@@ -206,10 +281,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4cea9256",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "TEST SUMMARY\n",
+      "============================================================\n",
+      "Service Status: ✓ Initialized\n",
+      "Processing Status: ✓ Success\n",
+      "Processing Time: 5.02s\n",
+      "Text Extracted: ✓ Yes\n",
+      "Confidence: 95.00%\n",
+      "============================================================\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"TEST SUMMARY\")\n",
@@ -225,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
